# vscode_conan_meson_ninja_template

./: .gitignore  README.md  conanfile.py  meson.build
include/: foo.hpp
src/: main.cpp
srcs/: foo.cpp  main.cpp
